log/ni_app_log_190204_171048.txt
2019-02-04T17:10:48|CRITICAL|root|Unhandled exception:Traceback (most recent call last):
  File "C:\LabPrograms\Python\nidaqmx_test\ni_app.py", line 39, in <module>
    app = NI_App(sys.argv)
  File "C:\ProgramData\Anaconda3\lib\site-packages\ScopeFoundry\base_app.py", line 332, in __init__
    self.setup()
  File "C:\LabPrograms\Python\nidaqmx_test\ni_app.py", line 19, in setup
    from ni_do_hardware import NI_DO_hw
  File "C:\LabPrograms\Python\nidaqmx_test\ni_do_hardware.py", line 54
    for port in device.do_ports
                              ^
SyntaxError: invalid syntax

